unpackaged/main/default/objects/ia_crm__Sales_Order_Item__c/ia_crm__Sales_Order_Item__c.object-meta.xml
<CustomObject>
    <description>Line items for Sales Order document.</description>
    <label>Sales Order Item</label>
    <nameField>
        <label>Line No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>