unpackaged/main/default/objects/ia_crm__Sales_Order_Item__c/fields/ia_crm__Employees__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Employees__c</fullName>
    <label>Employee</label>
    <length>80</length>
    <type>Text</type>
</CustomField>