unpackaged/main/default/objects/ia_crm__Sales_Order_Item__c/fields/ia_crm__Location__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Location__c</fullName>
    <label>Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>