unpackaged/main/default/objects/ia_crm__Sales_Order_Item__c/fields/ia_crm__Memo__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Memo__c</fullName>
    <label>Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>