unpackaged/main/default/objects/ia_crm__Sales_Order_Item__c/fields/ia_crm__Projects__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Projects__c</fullName>
    <label>Project</label>
    <length>150</length>
    <type>Text</type>
</CustomField>