unpackaged/main/default/objects/ia_crm__Sales_Order_Item__c/fields/ia_crm__Rev_Rec_Template__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Rev_Rec_Template__c</fullName>
    <label>Rev Rec Template</label>
    <length>80</length>
    <type>Text</type>
</CustomField>