unpackaged/main/default/objects/ia_crm__Sales_Order_Item__c/fields/ia_crm__Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Sales_Order__c</fullName>
    <label>Sales Order</label>
    <referenceTo>ia_crm__Sales_Order__c</referenceTo>
    <relationshipName>R00N40000001bdlLEAQ</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>