unpackaged/main/default/objects/ia_crm__Sales_Order_Item__c/fields/ia_crm__Ship_To__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Order Items</relationshipLabel>
    <relationshipName>Sales_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>