unpackaged/main/default/objects/ia_crm__Sales_Order_Item__c/fields/ia_crm__Tasks__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Tasks__c</fullName>
    <label>Task</label>
    <length>80</length>
    <type>Text</type>
</CustomField>